-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 9.0.0
-
None
-
-
e0b1f694e (9.0)
1. Open a C++ source file in the editor and navigate to a place where there are multiple lines of text in a row.
2. Press Alt + Right Click and make the cursor span two lines of text.
3. Make sure NumLock is disabled.
4. Press Delete on the numpad to delete characters to the right of the cursor.
Result:
Only characters on the second line are deleted. The first line is unaffected.
Expected result:
Characters on both lines should be deleted.
Note: This works as expected with Backspace - characters on both lines are deleted to the left of the cursor.